Room creation with hotel and room listing done
